--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
 
     <kotlin.version>1.7.10</kotlin.version>
     <kotlinx-serialization.version>1.3.3</kotlinx-serialization.version>
+    <sonar.organization>hstiqri</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
   <distributionManagement>
